--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,9 @@
 <body>
   <div class="page">
     @include('partials/header.html')
-    <main>
-
+    <main class="main">
+      @include('partials/banner.html')
+      @include('partials/service.html')
     </main>
     @include('partials/footer.html')
   </div>
