--- a/app/index.html
+++ b/app/index.html
@@ -72,7 +72,63 @@
       <div class="container">
         <div class="service__top">О курсе</div>
         <p class="service__description">Мы обучаем только современные методам и стандартам трансплантации волос в Мире</p>
-        <div class="service__slider">
+        <div class="service__slider-thumbnail">
+
+          <div class=" gallery-thumbs">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="service__slide-course">FUE</div>
+              </div>
+              <div class="swiper-slide">
+                <div class="service__slide-course">FUT</div>
+              </div>
+              <div class="swiper-slide">
+                <div class="service__slide-course">Long Hair Transplant</div>
+              </div>
+              <div class="swiper-slide">
+                <div class="service__slide-course">Body Hair Transplantation</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="gallery-top">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="service__slider-course-content">
+                  <h6  class="service__slider-course-title">ФУЭ (фолликулярная унитрансплантация)</h6>
+                  <p class="service__slider-course-text">Метод, при котором волосы извлекаются из донорской зоны (обычно задней части головы) с помощью инструмента, называемого микроножом. Затем фолликулы переносятся на области с потерей волос.</p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="service__slider-course-content">
+                  <h6  class="service__slider-course-title">ФУЭ (фолликулярная унитрансплантация)</h6>
+                  <p class="service__slider-course-text">Метод, при котором волосы извлекаются из донорской зоны (обычно задней части головы) с помощью инструмента, называемого микроножом. Затем фолликулы переносятся на области с потерей волос.</p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="service__slider-course-content">
+                  <h6  class="service__slider-course-title">ФУЭ (фолликулярная унитрансплантация)</h6>
+                  <p class="service__slider-course-text">Метод, при котором волосы извлекаются из донорской зоны (обычно задней части головы) с помощью инструмента, называемого микроножом. Затем фолликулы переносятся на области с потерей волос.</p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="service__slider-course-content">
+                  <h6  class="service__slider-course-title">ФУЭ (фолликулярная унитрансплантация)</h6>
+                  <p class="service__slider-course-text">Метод, при котором волосы извлекаются из донорской зоны (обычно задней части головы) с помощью инструмента, называемого микроножом. Затем фолликулы переносятся на области с потерей волос.</p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="service__slider-course-content">
+                  <h6  class="service__slider-course-title">ФУЭ (фолликулярная унитрансплантация)</h6>
+                  <p class="service__slider-course-text">Метод, при котором волосы извлекаются из донорской зоны (обычно задней части головы) с помощью инструмента, называемого микроножом. Затем фолликулы переносятся на области с потерей волос.</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Add Arrows -->
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+          </div>
 
         </div>
         <div class="service__cards">
@@ -168,8 +224,7 @@
         </div>
 
         <div class="service__course-slider">
-
-          <div class="swiper mySwiper">
+          <div class="swiper courseSwiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide slide_1">
                 <img src="img/slide.jpg" />
@@ -191,7 +246,6 @@
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
           </div>
-
         </div>
       </div>
     </div>
@@ -280,7 +334,103 @@
           </div>
         </div>
         <h5 class="service__text-h2">Прочитайте, что говорят специалисты прошедшие обучение</h5>
-        <div class="service__card-slide-inner">
+
+        <div class="service__review-slider">
+          <div class="swiper reviewSwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide slide_1">
+                <div class="service__card-slide-inner">
+                  <div class="service__card-slide">
+                    <div class="service__card-slide-head">
+                      <div class="service__card-slide-avatar">НИ</div>
+                      <div>
+                        <p class="service__card-slide-name">Надежда Иванова</p>
+                        <span class="service__card-slide-status">Врач-трихолог.</span>
+                      </div>
+                    </div>
+                    <div class="service__card-slide-body">
+                      <p class="service__card-slide-text">Прошла курс по пересадке волос и я просто в восторге! Сначала была волнительна, но наш преподаватель смог успокоить меня и ответил на все мои </p>
+                      <button class="service__card-slide-btn">Читать весь отзыв</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide slide_2">
+                <div class="service__card-slide-inner">
+                  <div class="service__card-slide">
+                    <div class="service__card-slide-head">
+                      <div class="service__card-slide-avatar">НИ</div>
+                      <div>
+                        <p class="service__card-slide-name">Надежда Иванова</p>
+                        <span class="service__card-slide-status">Врач-трихолог.</span>
+                      </div>
+                    </div>
+                    <div class="service__card-slide-body">
+                      <p class="service__card-slide-text">Прошла курс по пересадке волос и я просто в восторге! Сначала была волнительна, но наш преподаватель смог успокоить меня и ответил на все мои </p>
+                      <button class="service__card-slide-btn">Читать весь отзыв</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide slide_3">
+                <div class="service__card-slide-inner">
+                  <div class="service__card-slide">
+                    <div class="service__card-slide-head">
+                      <div class="service__card-slide-avatar">НИ</div>
+                      <div>
+                        <p class="service__card-slide-name">Надежда Иванова</p>
+                        <span class="service__card-slide-status">Врач-трихолог.</span>
+                      </div>
+                    </div>
+                    <div class="service__card-slide-body">
+                      <p class="service__card-slide-text">Прошла курс по пересадке волос и я просто в восторге! Сначала была волнительна, но наш преподаватель смог успокоить меня и ответил на все мои </p>
+                      <button class="service__card-slide-btn">Читать весь отзыв</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide slide_4">
+                <div class="service__card-slide-inner">
+                  <div class="service__card-slide">
+                    <div class="service__card-slide-head">
+                      <div class="service__card-slide-avatar">НИ</div>
+                      <div>
+                        <p class="service__card-slide-name">Надежда Иванова</p>
+                        <span class="service__card-slide-status">Врач-трихолог.</span>
+                      </div>
+                    </div>
+                    <div class="service__card-slide-body">
+                      <p class="service__card-slide-text">Прошла курс по пересадке волос и я просто в восторге! Сначала была волнительна, но наш преподаватель смог успокоить меня и ответил на все мои </p>
+                      <button class="service__card-slide-btn">Читать весь отзыв</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide slide_5">
+                <div class="service__card-slide-inner">
+                  <div class="service__card-slide">
+                    <div class="service__card-slide-head">
+                      <div class="service__card-slide-avatar">НИ</div>
+                      <div>
+                        <p class="service__card-slide-name">Надежда Иванова</p>
+                        <span class="service__card-slide-status">Врач-трихолог.</span>
+                      </div>
+                    </div>
+                    <div class="service__card-slide-body">
+                      <p class="service__card-slide-text">Прошла курс по пересадке волос и я просто в восторге! Сначала была волнительна, но наш преподаватель смог успокоить меня и ответил на все мои </p>
+                      <button class="service__card-slide-btn">Читать весь отзыв</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+          </div>
+        </div>
+
+        <!-- <div class="service__card-slide-inner">
           <div class="service__card-slide">
             <div class="service__card-slide-head">
               <div class="service__card-slide-avatar">НИ</div>
@@ -290,11 +440,12 @@
               </div>
             </div>
             <div class="service__card-slide-body">
-              <p class="service__card-slide-text">Прошла курс по пересадке волос и я просто в восторге! Сначала была волнительна, но наш преподаватель смог успокоить меня и ответил на все мои </p>
+              <p class="service__card-slide-text">Прошла курс по пересадке волос и я просто в восторге! Сначала была волнительна, но наш преподаватель смог успокоить меня и ответил на все мои </p>
               <button class="service__card-slide-btn">Читать весь отзыв</button>
             </div>
           </div>
-        </div>
+        </div> -->
+
       </div>
 
     </div>
